# CPP_3

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Makefile  Player.cpp  Player.h  README.md  Role.h  install_dependencies.sh  main.cpp  quick_build.sh  run.sh
GUI/: AutoDemoWindow.cpp  AutoDemoWindow.h  AutoGameWindow.cpp  AutoGameWindow.h  AutoPlayerSetupWindow.cpp  AutoPlayerSetupWindow.h  BlockingDialog.cpp  BlockingDialog.h  GameBoardWindow.cpp  GameBoardWindow.h  InstructionsWindow.cpp  InstructionsWindow.h  MainWindow.cpp  MainWindow.h  PlayerManager.cpp  PlayerManager.h  PlayerRegistrationScreen.cpp  PlayerRegistrationScreen.h  main.cpp
Roles/: Baron.cpp  Baron.h  General.cpp  General.h  Governor.cpp  Governor.h  Judge.cpp  Judge.h  Merchant.cpp  Merchant.h  RoleFactory.cpp  RoleFactory.h  Spy.cpp  Spy.h
Tests/: Action_test.cpp  Baron_test.cpp  EdgeCase_test.cpp  Game_test.cpp  General_test.cpp  Governor_test.cpp  Integration_test.cpp  Judge_test.cpp  Merchant_test.cpp  Player_test.cpp  Spy_test.cpp
